add 4 new subs, refactor based on new timelocking, add new across sub analyses

--- a/preprocessing/BJH016/scripts/BJH016_preprocessing_data.ipynb
+++ b/preprocessing/BJH016/scripts/BJH016_preprocessing_data.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "ae4a5017-ba0a-4694-8cba-eefaa497de79",
    "metadata": {},
    "outputs": [],
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "818abc23-824d-4a4f-b98c-581765afbcd8",
    "metadata": {},
    "outputs": [],
@@ -597,6 +597,100 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "e2e86a37-a5ed-4951-b351-3de877d0b2a6",
+   "metadata": {},
+   "source": [
+    "## Trial End"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "3703d86b-5ed5-4cc6-9aab-a6b25fbd24e1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Opening raw data file /home/brooke/pacman/preprocessing/BJH016/ieeg/BJH016_bp_raw_clean_data.fif...\n",
+      "    Range : 0 ... 2077999 =      0.000 ...  1038.999 secs\n",
+      "Ready.\n",
+      "Opening raw data file /home/brooke/pacman/preprocessing/BJH016/ieeg/BJH016_bp_raw_clean_data-1.fif...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_12089/4119140940.py:4: RuntimeWarning: This filename (/home/brooke/pacman/preprocessing/BJH016/ieeg/BJH016_bp_raw_clean_data.fif) does not conform to MNE naming conventions. All raw files should end with raw.fif, raw_sss.fif, raw_tsss.fif, _meg.fif, _eeg.fif, _ieeg.fif, raw.fif.gz, raw_sss.fif.gz, raw_tsss.fif.gz, _meg.fif.gz, _eeg.fif.gz or _ieeg.fif.gz\n",
+      "  bp_raw_fif = mne.io.Raw(f\"{preproc_data_dir}/{subject}_bp_raw_clean_data.fif\")\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    Range : 2078000 ... 4155999 =   1039.000 ...  2077.999 secs\n",
+      "Ready.\n",
+      "Opening raw data file /home/brooke/pacman/preprocessing/BJH016/ieeg/BJH016_bp_raw_clean_data-2.fif...\n",
+      "    Range : 4156000 ... 5901899 =   2078.000 ...  2950.950 secs\n",
+      "Ready.\n",
+      "904 events found\n",
+      "Event IDs: [0 1]\n",
+      "Not setting metadata\n",
+      "452 matching events found\n",
+      "No baseline correction applied\n",
+      "0 projection items activated\n",
+      "Overwriting existing file.\n",
+      "Loading data for 452 events and 20001 original time points ...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_12089/4119140940.py:18: RuntimeWarning: This filename (/home/brooke/pacman/preprocessing/BJH016/ieeg/BJH016_bp_clean_end-locked_ieeg.fif) does not conform to MNE naming conventions. All epochs files should end with -epo.fif, -epo.fif.gz, _epo.fif or _epo.fif.gz\n",
+      "  epoched_data.save(f\"{preproc_data_dir}/{subject}_bp_clean_end-locked_ieeg.fif\", overwrite = True, split_size = '1.9GB')\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 bad epochs dropped\n",
+      "Loading data for 1 events and 20001 original time points ...\n",
+      "Splitting into 4 parts\n",
+      "Loading data for 113 events and 20001 original time points ...\n",
+      "Loading data for 113 events and 20001 original time points ...\n",
+      "Loading data for 113 events and 20001 original time points ...\n",
+      "Loading data for 113 events and 20001 original time points ...\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Epoching the raw data ##\n",
+    "\n",
+    "# load data \n",
+    "bp_raw_fif = mne.io.Raw(f\"{preproc_data_dir}/{subject}_bp_raw_clean_data.fif\")\n",
+    "events = mne.find_events(bp_raw_fif, output='step', consecutive = False, stim_channel='STI')\n",
+    "\n",
+    "# create events\n",
+    "    \n",
+    "# only epoch good channels\n",
+    "channels_of_interest =  [x for x in bp_raw_fif.info['ch_names'] if x not in bp_raw_fif.info['bads']]\n",
+    "\n",
+    "# epoch the data\n",
+    "epoched_data = mne.Epochs(bp_raw_fif, events, \n",
+    "                          event_id = 0, tmin = -5, tmax = 5, \n",
+    "                          baseline = None, picks = channels_of_interest,\n",
+    "                             reject_by_annotation = False)\n",
+    "# save the data\n",
+    "epoched_data.save(f\"{preproc_data_dir}/{subject}_bp_clean_end-locked_ieeg.fif\", overwrite = True, split_size = '1.9GB')"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "id": "9180611f-05e7-40b6-94d1-26d3e4d765ae",
@@ -702,7 +796,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "88508f42-b7cc-4e61-9e7d-313f1577740d",
    "metadata": {},
    "outputs": [
@@ -739,39 +833,39 @@
        "      <th>0</th>\n",
        "      <td>0</td>\n",
        "      <td>5</td>\n",
-       "      <td>83400</td>\n",
+       "      <td>82400</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>1</td>\n",
-       "      <td>8</td>\n",
-       "      <td>98800</td>\n",
+       "      <td>10</td>\n",
+       "      <td>11</td>\n",
+       "      <td>298100</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>2</td>\n",
        "      <td>11</td>\n",
-       "      <td>119400</td>\n",
+       "      <td>3</td>\n",
+       "      <td>306600</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>3</td>\n",
-       "      <td>3</td>\n",
-       "      <td>126600</td>\n",
+       "      <td>13</td>\n",
+       "      <td>15</td>\n",
+       "      <td>335600</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>5</td>\n",
-       "      <td>15</td>\n",
-       "      <td>162000</td>\n",
+       "      <td>14</td>\n",
+       "      <td>2</td>\n",
+       "      <td>346800</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
@@ -784,15 +878,23 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>386</th>\n",
-       "      <td>444</td>\n",
-       "      <td>7</td>\n",
-       "      <td>5759600</td>\n",
+       "      <th>299</th>\n",
+       "      <td>443</td>\n",
+       "      <td>3</td>\n",
+       "      <td>5749700</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>387</th>\n",
+       "      <th>300</th>\n",
+       "      <td>444</td>\n",
+       "      <td>7</td>\n",
+       "      <td>5759500</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>301</th>\n",
        "      <td>445</td>\n",
        "      <td>17</td>\n",
        "      <td>5770500</td>\n",
@@ -800,52 +902,44 @@
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>388</th>\n",
+       "      <th>302</th>\n",
        "      <td>446</td>\n",
        "      <td>15</td>\n",
-       "      <td>5782700</td>\n",
+       "      <td>5782600</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>389</th>\n",
+       "      <th>303</th>\n",
        "      <td>447</td>\n",
        "      <td>18</td>\n",
-       "      <td>5798000</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>390</th>\n",
-       "      <td>448</td>\n",
-       "      <td>19</td>\n",
-       "      <td>5816500</td>\n",
+       "      <td>5797900</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>391 rows × 5 columns</p>\n",
+       "<p>304 rows × 5 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
        "     neural_trial_numeric  TrialType   sample  sample_before  event\n",
-       "0                       0          5    83400              0      1\n",
-       "1                       1          8    98800              0      1\n",
-       "2                       2         11   119400              0      1\n",
-       "3                       3          3   126600              0      1\n",
-       "4                       5         15   162000              0      1\n",
+       "0                       0          5    82400              0      1\n",
+       "1                      10         11   298100              0      1\n",
+       "2                      11          3   306600              0      1\n",
+       "3                      13         15   335600              0      1\n",
+       "4                      14          2   346800              0      1\n",
        "..                    ...        ...      ...            ...    ...\n",
-       "386                   444          7  5759600              0      1\n",
-       "387                   445         17  5770500              0      1\n",
-       "388                   446         15  5782700              0      1\n",
-       "389                   447         18  5798000              0      1\n",
-       "390                   448         19  5816500              0      1\n",
+       "299                   443          3  5749700              0      1\n",
+       "300                   444          7  5759500              0      1\n",
+       "301                   445         17  5770500              0      1\n",
+       "302                   446         15  5782600              0      1\n",
+       "303                   447         18  5797900              0      1\n",
        "\n",
-       "[391 rows x 5 columns]"
+       "[304 rows x 5 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -858,7 +952,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "8751b0b8-8b6e-4f29-82d9-15ed0e78caed",
    "metadata": {},
    "outputs": [],
@@ -891,7 +985,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "33c10388-1429-4eb3-a02b-5c0ab149447b",
    "metadata": {},
    "outputs": [
@@ -900,18 +994,18 @@
      "output_type": "stream",
      "text": [
       "Not setting metadata\n",
-      "391 matching events found\n",
+      "304 matching events found\n",
       "No baseline correction applied\n",
       "0 projection items activated\n",
       "Overwriting existing file.\n",
-      "Loading data for 391 events and 20001 original time points ...\n"
+      "Loading data for 304 events and 20001 original time points ...\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_493507/3409931828.py:7: RuntimeWarning: This filename (/home/brooke/pacman/preprocessing/BJH016/ieeg/BJH016_bp_raw_clean_last_away_events.fif) does not conform to MNE naming conventions. All epochs files should end with -epo.fif, -epo.fif.gz, _epo.fif or _epo.fif.gz\n",
+      "/tmp/ipykernel_12089/3409931828.py:7: RuntimeWarning: This filename (/home/brooke/pacman/preprocessing/BJH016/ieeg/BJH016_bp_raw_clean_last_away_events.fif) does not conform to MNE naming conventions. All epochs files should end with -epo.fif, -epo.fif.gz, _epo.fif or _epo.fif.gz\n",
       "  last_away_epochs.save(f\"{preproc_data_dir}/{subject}_bp_raw_clean_last_away_events.fif\", overwrite = True, split_size = '1.9GB')\n"
      ]
     },
@@ -922,9 +1016,9 @@
       "0 bad epochs dropped\n",
       "Loading data for 1 events and 20001 original time points ...\n",
       "Splitting into 3 parts\n",
-      "Loading data for 131 events and 20001 original time points ...\n",
-      "Loading data for 130 events and 20001 original time points ...\n",
-      "Loading data for 130 events and 20001 original time points ...\n"
+      "Loading data for 102 events and 20001 original time points ...\n",
+      "Loading data for 101 events and 20001 original time points ...\n",
+      "Loading data for 101 events and 20001 original time points ...\n"
      ]
     }
    ],
