--- a/preprocessing/BJH021/scripts/BJH021_preprocessing.ipynb
+++ b/preprocessing/BJH021/scripts/BJH021_preprocessing.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "id": "eb1fb0a1-89e5-48fc-9752-7462a522f009",
    "metadata": {},
    "outputs": [],
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "1f61d095-fbbd-42f5-b6ce-9b5139043844",
    "metadata": {},
    "outputs": [],
@@ -760,6 +760,95 @@
   },
   {
    "cell_type": "markdown",
+   "id": "8bdd2a34-cf2b-461b-b2df-3b4fdd3576d8",
+   "metadata": {},
+   "source": [
+    "## Trial End"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "6cbe56d1-a988-430f-b774-2e9ae53d088f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Opening raw data file /home/brooke/pacman/preprocessing/BJH021/ieeg/BJH021_bp_raw_clean_data.fif...\n",
+      "    Range : 0 ... 2225999 =      0.000 ...  1112.999 secs\n",
+      "Ready.\n",
+      "Opening raw data file /home/brooke/pacman/preprocessing/BJH021/ieeg/BJH021_bp_raw_clean_data-1.fif...\n",
+      "    Range : 2226000 ... 3156499 =   1113.000 ...  1578.249 secs\n",
+      "Ready.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_155923/4119140940.py:4: RuntimeWarning: This filename (/home/brooke/pacman/preprocessing/BJH021/ieeg/BJH021_bp_raw_clean_data.fif) does not conform to MNE naming conventions. All raw files should end with raw.fif, raw_sss.fif, raw_tsss.fif, _meg.fif, _eeg.fif, _ieeg.fif, raw.fif.gz, raw_sss.fif.gz, raw_tsss.fif.gz, _meg.fif.gz, _eeg.fif.gz or _ieeg.fif.gz\n",
+      "  bp_raw_fif = mne.io.Raw(f\"{preproc_data_dir}/{subject}_bp_raw_clean_data.fif\")\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "480 events found\n",
+      "Event IDs: [0 1]\n",
+      "Not setting metadata\n",
+      "240 matching events found\n",
+      "No baseline correction applied\n",
+      "0 projection items activated\n",
+      "Overwriting existing file.\n",
+      "Loading data for 240 events and 20001 original time points ...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_155923/4119140940.py:18: RuntimeWarning: This filename (/home/brooke/pacman/preprocessing/BJH021/ieeg/BJH021_bp_clean_end-locked_ieeg.fif) does not conform to MNE naming conventions. All epochs files should end with -epo.fif, -epo.fif.gz, _epo.fif or _epo.fif.gz\n",
+      "  epoched_data.save(f\"{preproc_data_dir}/{subject}_bp_clean_end-locked_ieeg.fif\", overwrite = True, split_size = '1.9GB')\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 bad epochs dropped\n",
+      "Loading data for 1 events and 20001 original time points ...\n",
+      "Splitting into 2 parts\n",
+      "Loading data for 120 events and 20001 original time points ...\n",
+      "Loading data for 119 events and 20001 original time points ...\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Epoching the raw data ##\n",
+    "\n",
+    "# load data \n",
+    "bp_raw_fif = mne.io.Raw(f\"{preproc_data_dir}/{subject}_bp_raw_clean_data.fif\")\n",
+    "events = mne.find_events(bp_raw_fif, output='step', consecutive = False, stim_channel='STI')\n",
+    "\n",
+    "# create events\n",
+    "    \n",
+    "# only epoch good channels\n",
+    "channels_of_interest =  [x for x in bp_raw_fif.info['ch_names'] if x not in bp_raw_fif.info['bads']]\n",
+    "\n",
+    "# epoch the data\n",
+    "epoched_data = mne.Epochs(bp_raw_fif, events, \n",
+    "                          event_id = 0, tmin = -5, tmax = 5, \n",
+    "                          baseline = None, picks = channels_of_interest,\n",
+    "                             reject_by_annotation = False)\n",
+    "# save the data\n",
+    "epoched_data.save(f\"{preproc_data_dir}/{subject}_bp_clean_end-locked_ieeg.fif\", overwrite = True, split_size = '1.9GB')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "56725cf0-83c7-4e09-aedf-330b411164ce",
    "metadata": {},
    "source": [
@@ -832,7 +921,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "id": "314a2973-e175-4eba-885a-1f363cc51b3c",
    "metadata": {},
    "outputs": [
@@ -857,7 +946,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>trial_numeric</th>\n",
+       "      <th>neural_trial_numeric</th>\n",
        "      <th>TrialType</th>\n",
        "      <th>sample</th>\n",
        "      <th>sample_before</th>\n",
@@ -867,41 +956,41 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>5</td>\n",
+       "      <td>1</td>\n",
+       "      <td>8</td>\n",
+       "      <td>46500</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>4</td>\n",
        "      <td>14</td>\n",
        "      <td>105400</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>7</td>\n",
+       "      <th>2</th>\n",
+       "      <td>5</td>\n",
+       "      <td>2</td>\n",
+       "      <td>115600</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>6</td>\n",
        "      <td>18</td>\n",
        "      <td>132400</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>8</td>\n",
+       "      <th>4</th>\n",
+       "      <td>7</td>\n",
        "      <td>17</td>\n",
        "      <td>150200</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>9</td>\n",
-       "      <td>16</td>\n",
-       "      <td>170400</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>10</td>\n",
-       "      <td>7</td>\n",
-       "      <td>186100</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
@@ -914,40 +1003,40 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>176</th>\n",
+       "      <th>196</th>\n",
        "      <td>234</td>\n",
-       "      <td>18</td>\n",
-       "      <td>2988700</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>177</th>\n",
-       "      <td>235</td>\n",
        "      <td>19</td>\n",
        "      <td>3000100</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>178</th>\n",
-       "      <td>236</td>\n",
+       "      <th>197</th>\n",
+       "      <td>235</td>\n",
        "      <td>6</td>\n",
        "      <td>3011100</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>179</th>\n",
-       "      <td>238</td>\n",
+       "      <th>198</th>\n",
+       "      <td>236</td>\n",
+       "      <td>8</td>\n",
+       "      <td>3020400</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>199</th>\n",
+       "      <td>237</td>\n",
        "      <td>13</td>\n",
        "      <td>3028900</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>180</th>\n",
-       "      <td>239</td>\n",
+       "      <th>200</th>\n",
+       "      <td>238</td>\n",
        "      <td>3</td>\n",
        "      <td>3041500</td>\n",
        "      <td>0</td>\n",
@@ -955,27 +1044,27 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>181 rows × 5 columns</p>\n",
+       "<p>201 rows × 5 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "     trial_numeric  TrialType   sample  sample_before  event\n",
-       "0                5         14   105400              0      1\n",
-       "1                7         18   132400              0      1\n",
-       "2                8         17   150200              0      1\n",
-       "3                9         16   170400              0      1\n",
-       "4               10          7   186100              0      1\n",
-       "..             ...        ...      ...            ...    ...\n",
-       "176            234         18  2988700              0      1\n",
-       "177            235         19  3000100              0      1\n",
-       "178            236          6  3011100              0      1\n",
-       "179            238         13  3028900              0      1\n",
-       "180            239          3  3041500              0      1\n",
+       "     neural_trial_numeric  TrialType   sample  sample_before  event\n",
+       "0                       1          8    46500              0      1\n",
+       "1                       4         14   105400              0      1\n",
+       "2                       5          2   115600              0      1\n",
+       "3                       6         18   132400              0      1\n",
+       "4                       7         17   150200              0      1\n",
+       "..                    ...        ...      ...            ...    ...\n",
+       "196                   234         19  3000100              0      1\n",
+       "197                   235          6  3011100              0      1\n",
+       "198                   236          8  3020400              0      1\n",
+       "199                   237         13  3028900              0      1\n",
+       "200                   238          3  3041500              0      1\n",
        "\n",
-       "[181 rows x 5 columns]"
+       "[201 rows x 5 columns]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -988,21 +1077,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 4,
    "id": "4689505c-b013-49df-b9a4-ba21af89a906",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# filter to good epochs and fix trial indexing\n",
-    "last_away_data['trial_numeric'] = last_away_data['trial_numeric'] - 1\n",
-    "\n",
     "# create events\n",
     "last_away_events = last_away_data[['sample', 'sample_before', 'event']].copy().to_numpy()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 5,
    "id": "148a650d-fddf-4d14-9e16-d7a15aa4922f",
    "metadata": {},
    "outputs": [
@@ -1010,19 +1096,27 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Opening raw data file /home/brooke/pacman/preprocessing/BJH021/ieeg/BJH021_bp_raw_clean_data.fif...\n",
+      "    Range : 0 ... 2225999 =      0.000 ...  1112.999 secs\n",
+      "Ready.\n",
+      "Opening raw data file /home/brooke/pacman/preprocessing/BJH021/ieeg/BJH021_bp_raw_clean_data-1.fif...\n",
+      "    Range : 2226000 ... 3156499 =   1113.000 ...  1578.249 secs\n",
+      "Ready.\n",
       "Not setting metadata\n",
-      "181 matching events found\n",
+      "201 matching events found\n",
       "No baseline correction applied\n",
       "0 projection items activated\n",
       "Overwriting existing file.\n",
-      "Loading data for 181 events and 20001 original time points ...\n"
+      "Loading data for 201 events and 20001 original time points ...\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_3788/3409931828.py:7: RuntimeWarning: This filename (/home/brooke/pacman/preprocessing/BJH021/ieeg/BJH021_bp_raw_clean_last_away_events.fif) does not conform to MNE naming conventions. All epochs files should end with -epo.fif, -epo.fif.gz, _epo.fif or _epo.fif.gz\n",
+      "/tmp/ipykernel_4846/4054492422.py:2: RuntimeWarning: This filename (/home/brooke/pacman/preprocessing/BJH021/ieeg/BJH021_bp_raw_clean_data.fif) does not conform to MNE naming conventions. All raw files should end with raw.fif, raw_sss.fif, raw_tsss.fif, _meg.fif, _eeg.fif, _ieeg.fif, raw.fif.gz, raw_sss.fif.gz, raw_tsss.fif.gz, _meg.fif.gz, _eeg.fif.gz or _ieeg.fif.gz\n",
+      "  bp_raw_fif = mne.io.Raw(f\"{preproc_data_dir}/{subject}_bp_raw_clean_data.fif\")\n",
+      "/tmp/ipykernel_4846/4054492422.py:13: RuntimeWarning: This filename (/home/brooke/pacman/preprocessing/BJH021/ieeg/BJH021_bp_raw_clean_last_away_events.fif) does not conform to MNE naming conventions. All epochs files should end with -epo.fif, -epo.fif.gz, _epo.fif or _epo.fif.gz\n",
       "  last_away_epochs.save(f\"{preproc_data_dir}/{subject}_bp_raw_clean_last_away_events.fif\", overwrite = True, split_size = '1.9GB')\n"
      ]
     },
@@ -1033,12 +1127,18 @@
       "0 bad epochs dropped\n",
       "Loading data for 1 events and 20001 original time points ...\n",
       "Splitting into 2 parts\n",
-      "Loading data for 91 events and 20001 original time points ...\n",
-      "Loading data for 90 events and 20001 original time points ...\n"
+      "Loading data for 101 events and 20001 original time points ...\n",
+      "Loading data for 100 events and 20001 original time points ...\n"
      ]
     }
    ],
    "source": [
+    "# load data \n",
+    "bp_raw_fif = mne.io.Raw(f\"{preproc_data_dir}/{subject}_bp_raw_clean_data.fif\")\n",
+    "    \n",
+    "# only epoch good channels\n",
+    "channels_of_interest =  [x for x in bp_raw_fif.info['ch_names'] if x not in bp_raw_fif.info['bads']]\n",
+    "\n",
     "# epoch the data\n",
     "last_away_epochs = mne.Epochs(bp_raw_fif, last_away_events, \n",
     "                          event_id = 1, tmin = -5, tmax =5, \n",
