--- a/preprocessing/BJH025/scripts/BJH025_preprocessing.ipynb
+++ b/preprocessing/BJH025/scripts/BJH025_preprocessing.ipynb
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "d7d0fa71-30b2-4684-ad96-1e5b7c05a39a",
    "metadata": {},
    "outputs": [],
@@ -699,6 +699,93 @@
   },
   {
    "cell_type": "markdown",
+   "id": "67d774ad-aea4-40e5-a3bb-39df1d9c2b11",
+   "metadata": {},
+   "source": [
+    "## Trial End"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "0b19c3e4-5595-4b1d-8e8d-373cb8de20a0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Opening raw data file /home/brooke/pacman/preprocessing/BJH025/ieeg/BJH025_bp_raw_clean_data.fif...\n",
+      "    Range : 0 ... 2207999 =      0.000 ...  1103.999 secs\n",
+      "Ready.\n",
+      "Opening raw data file /home/brooke/pacman/preprocessing/BJH025/ieeg/BJH025_bp_raw_clean_data-1.fif...\n",
+      "    Range : 2208000 ... 2966399 =   1104.000 ...  1483.199 secs\n",
+      "Ready.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_138399/2629699040.py:4: RuntimeWarning: This filename (/home/brooke/pacman/preprocessing/BJH025/ieeg/BJH025_bp_raw_clean_data.fif) does not conform to MNE naming conventions. All raw files should end with raw.fif, raw_sss.fif, raw_tsss.fif, _meg.fif, _eeg.fif, _ieeg.fif, raw.fif.gz, raw_sss.fif.gz, raw_tsss.fif.gz, _meg.fif.gz, _eeg.fif.gz or _ieeg.fif.gz\n",
+      "  bp_raw_fif = mne.io.Raw(f\"{preproc_data_dir}/{subject}_bp_raw_clean_data.fif\")\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "482 events found\n",
+      "Event IDs: [0 1 2]\n",
+      "Not setting metadata\n",
+      "241 matching events found\n",
+      "No baseline correction applied\n",
+      "0 projection items activated\n",
+      "Overwriting existing file.\n",
+      "Loading data for 241 events and 20001 original time points ...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_138399/2629699040.py:16: RuntimeWarning: This filename (/home/brooke/pacman/preprocessing/BJH025/ieeg/BJH025_bp_clean_end-locked_ieeg.fif) does not conform to MNE naming conventions. All epochs files should end with -epo.fif, -epo.fif.gz, _epo.fif or _epo.fif.gz\n",
+      "  epoched_data.save(f\"{preproc_data_dir}/{subject}_bp_clean_end-locked_ieeg.fif\", overwrite = True, split_size = '1.9GB')\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 bad epochs dropped\n",
+      "Loading data for 1 events and 20001 original time points ...\n",
+      "Splitting into 2 parts\n",
+      "Loading data for 121 events and 20001 original time points ...\n",
+      "Loading data for 120 events and 20001 original time points ...\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Epoching the raw data ##\n",
+    "\n",
+    "# load data \n",
+    "bp_raw_fif = mne.io.Raw(f\"{preproc_data_dir}/{subject}_bp_raw_clean_data.fif\")\n",
+    "events = mne.find_events(bp_raw_fif, output='step', consecutive = False, stim_channel='STI')\n",
+    "    \n",
+    "# only epoch good channels\n",
+    "channels_of_interest =  [x for x in bp_raw_fif.info['ch_names'] if x not in bp_raw_fif.info['bads']]\n",
+    "\n",
+    "# epoch the data\n",
+    "epoched_data = mne.Epochs(bp_raw_fif, events, \n",
+    "                          event_id = 0, tmin = -5, tmax = 5, \n",
+    "                          baseline = None, picks = channels_of_interest,\n",
+    "                             reject_by_annotation = False)\n",
+    "# save the data\n",
+    "epoched_data.save(f\"{preproc_data_dir}/{subject}_bp_clean_end-locked_ieeg.fif\", overwrite = True, split_size = '1.9GB')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "583289cc-2b7c-4dba-ae1b-72c9c8e76a1a",
    "metadata": {},
    "source": [
@@ -707,7 +794,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "id": "c865f1da-e02b-4bc3-bc26-7d6a674088b7",
    "metadata": {},
    "outputs": [
@@ -732,7 +819,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>trial_numeric</th>\n",
+       "      <th>neural_trial_numeric</th>\n",
        "      <th>TrialType</th>\n",
        "      <th>sample</th>\n",
        "      <th>sample_before</th>\n",
@@ -742,41 +829,41 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "      <td>13</td>\n",
-       "      <td>19400</td>\n",
+       "      <td>17700</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>2</td>\n",
-       "      <td>11</td>\n",
-       "      <td>27800</td>\n",
+       "      <td>3</td>\n",
+       "      <td>42400</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>3</td>\n",
-       "      <td>3</td>\n",
-       "      <td>44000</td>\n",
+       "      <td>12</td>\n",
+       "      <td>58900</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>4</td>\n",
-       "      <td>12</td>\n",
-       "      <td>63900</td>\n",
+       "      <td>6</td>\n",
+       "      <td>6</td>\n",
+       "      <td>124400</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>5</td>\n",
-       "      <td>4</td>\n",
-       "      <td>72200</td>\n",
+       "      <td>7</td>\n",
+       "      <td>14</td>\n",
+       "      <td>134100</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
@@ -789,68 +876,68 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>213</th>\n",
-       "      <td>235</td>\n",
+       "      <th>196</th>\n",
+       "      <td>233</td>\n",
        "      <td>18</td>\n",
-       "      <td>2871600</td>\n",
+       "      <td>2866700</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>214</th>\n",
-       "      <td>236</td>\n",
+       "      <th>197</th>\n",
+       "      <td>234</td>\n",
        "      <td>4</td>\n",
-       "      <td>2882500</td>\n",
+       "      <td>2878900</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>215</th>\n",
-       "      <td>237</td>\n",
+       "      <th>198</th>\n",
+       "      <td>235</td>\n",
        "      <td>8</td>\n",
-       "      <td>2893100</td>\n",
+       "      <td>2890300</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>216</th>\n",
-       "      <td>238</td>\n",
+       "      <th>199</th>\n",
+       "      <td>236</td>\n",
        "      <td>7</td>\n",
-       "      <td>2903600</td>\n",
+       "      <td>2899500</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>217</th>\n",
-       "      <td>239</td>\n",
+       "      <th>200</th>\n",
+       "      <td>237</td>\n",
        "      <td>2</td>\n",
-       "      <td>2911600</td>\n",
+       "      <td>2909900</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>218 rows × 5 columns</p>\n",
+       "<p>201 rows × 5 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "     trial_numeric  TrialType   sample  sample_before  event\n",
-       "0                1         13    19400              0      1\n",
-       "1                2         11    27800              0      1\n",
-       "2                3          3    44000              0      1\n",
-       "3                4         12    63900              0      1\n",
-       "4                5          4    72200              0      1\n",
-       "..             ...        ...      ...            ...    ...\n",
-       "213            235         18  2871600              0      1\n",
-       "214            236          4  2882500              0      1\n",
-       "215            237          8  2893100              0      1\n",
-       "216            238          7  2903600              0      1\n",
-       "217            239          2  2911600              0      1\n",
+       "     neural_trial_numeric  TrialType   sample  sample_before  event\n",
+       "0                       0         13    17700              0      1\n",
+       "1                       2          3    42400              0      1\n",
+       "2                       3         12    58900              0      1\n",
+       "3                       6          6   124400              0      1\n",
+       "4                       7         14   134100              0      1\n",
+       "..                    ...        ...      ...            ...    ...\n",
+       "196                   233         18  2866700              0      1\n",
+       "197                   234          4  2878900              0      1\n",
+       "198                   235          8  2890300              0      1\n",
+       "199                   236          7  2899500              0      1\n",
+       "200                   237          2  2909900              0      1\n",
        "\n",
-       "[218 rows x 5 columns]"
+       "[201 rows x 5 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -863,21 +950,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "id": "dd41c5cd-0432-4bdd-b17d-68ea18a74802",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# filter to good epochs and fix trial indexing\n",
-    "last_away_data['trial_numeric'] = last_away_data['trial_numeric'] - 1\n",
-    "\n",
     "# create events\n",
     "last_away_events = last_away_data[['sample', 'sample_before', 'event']].copy().to_numpy()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "id": "f394447b-f502-4ccb-a7dd-913f458f896b",
    "metadata": {},
    "outputs": [
@@ -885,18 +969,27 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Opening raw data file /home/brooke/pacman/preprocessing/BJH025/ieeg/BJH025_bp_raw_clean_data.fif...\n",
+      "    Range : 0 ... 2207999 =      0.000 ...  1103.999 secs\n",
+      "Ready.\n",
+      "Opening raw data file /home/brooke/pacman/preprocessing/BJH025/ieeg/BJH025_bp_raw_clean_data-1.fif...\n",
+      "    Range : 2208000 ... 2966399 =   1104.000 ...  1483.199 secs\n",
+      "Ready.\n",
       "Not setting metadata\n",
-      "218 matching events found\n",
+      "201 matching events found\n",
       "No baseline correction applied\n",
       "0 projection items activated\n",
-      "Loading data for 218 events and 20001 original time points ...\n"
+      "Overwriting existing file.\n",
+      "Loading data for 201 events and 20001 original time points ...\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_382499/3409931828.py:7: RuntimeWarning: This filename (/home/brooke/pacman/preprocessing/BJH025/ieeg/BJH025_bp_raw_clean_last_away_events.fif) does not conform to MNE naming conventions. All epochs files should end with -epo.fif, -epo.fif.gz, _epo.fif or _epo.fif.gz\n",
+      "/tmp/ipykernel_4551/2975798972.py:2: RuntimeWarning: This filename (/home/brooke/pacman/preprocessing/BJH025/ieeg/BJH025_bp_raw_clean_data.fif) does not conform to MNE naming conventions. All raw files should end with raw.fif, raw_sss.fif, raw_tsss.fif, _meg.fif, _eeg.fif, _ieeg.fif, raw.fif.gz, raw_sss.fif.gz, raw_tsss.fif.gz, _meg.fif.gz, _eeg.fif.gz or _ieeg.fif.gz\n",
+      "  bp_raw_fif = mne.io.Raw(f\"{preproc_data_dir}/{subject}_bp_raw_clean_data.fif\")\n",
+      "/tmp/ipykernel_4551/2975798972.py:14: RuntimeWarning: This filename (/home/brooke/pacman/preprocessing/BJH025/ieeg/BJH025_bp_raw_clean_last_away_events.fif) does not conform to MNE naming conventions. All epochs files should end with -epo.fif, -epo.fif.gz, _epo.fif or _epo.fif.gz\n",
       "  last_away_epochs.save(f\"{preproc_data_dir}/{subject}_bp_raw_clean_last_away_events.fif\", overwrite = True, split_size = '1.9GB')\n"
      ]
     },
@@ -907,12 +1000,19 @@
       "0 bad epochs dropped\n",
       "Loading data for 1 events and 20001 original time points ...\n",
       "Splitting into 2 parts\n",
-      "Loading data for 109 events and 20001 original time points ...\n",
-      "Loading data for 109 events and 20001 original time points ...\n"
+      "Loading data for 101 events and 20001 original time points ...\n",
+      "Loading data for 100 events and 20001 original time points ...\n"
      ]
     }
    ],
    "source": [
+    "# load data \n",
+    "bp_raw_fif = mne.io.Raw(f\"{preproc_data_dir}/{subject}_bp_raw_clean_data.fif\")\n",
+    "\n",
+    "# only epoch good channels\n",
+    "channels_of_interest =  [x for x in bp_raw_fif.info['ch_names'] if x not in bp_raw_fif.info['bads']]\n",
+    "\n",
+    "\n",
     "# epoch the data\n",
     "last_away_epochs = mne.Epochs(bp_raw_fif, last_away_events, \n",
     "                          event_id = 1, tmin = -5, tmax =5, \n",
