--- a/preprocessing/LL10/scripts/LL10_preprocessing.ipynb
+++ b/preprocessing/LL10/scripts/LL10_preprocessing.ipynb
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "44c40205-8069-4a2c-9c42-1e0d938fead6",
    "metadata": {},
    "outputs": [],
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "1f61d095-fbbd-42f5-b6ce-9b5139043844",
    "metadata": {},
    "outputs": [],
@@ -623,6 +623,90 @@
   },
   {
    "cell_type": "markdown",
+   "id": "8fc68b9c-9783-4c74-a7bc-ffb7a7a1f325",
+   "metadata": {},
+   "source": [
+    "## Trial End"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "0d0469e7-5755-4d6a-8c15-6a504a5440e2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Opening raw data file /home/brooke/pacman/preprocessing/LL10/ieeg/LL10_bp_raw_clean_data.fif...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_137739/4119140940.py:4: RuntimeWarning: This filename (/home/brooke/pacman/preprocessing/LL10/ieeg/LL10_bp_raw_clean_data.fif) does not conform to MNE naming conventions. All raw files should end with raw.fif, raw_sss.fif, raw_tsss.fif, _meg.fif, _eeg.fif, _ieeg.fif, raw.fif.gz, raw_sss.fif.gz, raw_tsss.fif.gz, _meg.fif.gz, _eeg.fif.gz or _ieeg.fif.gz\n",
+      "  bp_raw_fif = mne.io.Raw(f\"{preproc_data_dir}/{subject}_bp_raw_clean_data.fif\")\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    Range : 0 ... 1559659 =      0.000 ...  3046.209 secs\n",
+      "Ready.\n",
+      "480 events found\n",
+      "Event IDs: [0 1]\n",
+      "Not setting metadata\n",
+      "240 matching events found\n",
+      "No baseline correction applied\n",
+      "0 projection items activated\n",
+      "Overwriting existing file.\n",
+      "Loading data for 240 events and 5121 original time points ...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_137739/4119140940.py:18: RuntimeWarning: This filename (/home/brooke/pacman/preprocessing/LL10/ieeg/LL10_bp_clean_end-locked_ieeg.fif) does not conform to MNE naming conventions. All epochs files should end with -epo.fif, -epo.fif.gz, _epo.fif or _epo.fif.gz\n",
+      "  epoched_data.save(f\"{preproc_data_dir}/{subject}_bp_clean_end-locked_ieeg.fif\", overwrite = True, split_size = '1.9GB')\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 bad epochs dropped\n",
+      "Loading data for 1 events and 5121 original time points ...\n",
+      "Loading data for 239 events and 5121 original time points ...\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Epoching the raw data ##\n",
+    "\n",
+    "# load data \n",
+    "bp_raw_fif = mne.io.Raw(f\"{preproc_data_dir}/{subject}_bp_raw_clean_data.fif\")\n",
+    "events = mne.find_events(bp_raw_fif, output='step', consecutive = False, stim_channel='STI')\n",
+    "\n",
+    "# create events\n",
+    "    \n",
+    "# only epoch good channels\n",
+    "channels_of_interest =  [x for x in bp_raw_fif.info['ch_names'] if x not in bp_raw_fif.info['bads']]\n",
+    "\n",
+    "# epoch the data\n",
+    "epoched_data = mne.Epochs(bp_raw_fif, events, \n",
+    "                          event_id = 0, tmin = -5, tmax = 5, \n",
+    "                          baseline = None, picks = channels_of_interest,\n",
+    "                             reject_by_annotation = False)\n",
+    "# save the data\n",
+    "epoched_data.save(f\"{preproc_data_dir}/{subject}_bp_clean_end-locked_ieeg.fif\", overwrite = True, split_size = '1.9GB')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "56725cf0-83c7-4e09-aedf-330b411164ce",
    "metadata": {},
    "source": [
@@ -896,7 +980,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>trial_numeric</th>\n",
+       "      <th>neural_trial_numeric</th>\n",
        "      <th>TrialType</th>\n",
        "      <th>sample</th>\n",
        "      <th>sample_before</th>\n",
@@ -906,7 +990,7 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>2</td>\n",
+       "      <td>1</td>\n",
        "      <td>3</td>\n",
        "      <td>23270</td>\n",
        "      <td>0</td>\n",
@@ -914,7 +998,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>3</td>\n",
+       "      <td>2</td>\n",
        "      <td>8</td>\n",
        "      <td>27084</td>\n",
        "      <td>0</td>\n",
@@ -922,7 +1006,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>4</td>\n",
+       "      <td>3</td>\n",
        "      <td>11</td>\n",
        "      <td>29952</td>\n",
        "      <td>0</td>\n",
@@ -931,16 +1015,16 @@
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>6</td>\n",
-       "      <td>16</td>\n",
-       "      <td>36531</td>\n",
+       "      <td>2</td>\n",
+       "      <td>45158</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>7</td>\n",
-       "      <td>2</td>\n",
-       "      <td>45158</td>\n",
+       "      <td>19</td>\n",
+       "      <td>55014</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
@@ -953,40 +1037,40 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>220</th>\n",
-       "      <td>235</td>\n",
+       "      <th>190</th>\n",
+       "      <td>232</td>\n",
+       "      <td>9</td>\n",
+       "      <td>841139</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>191</th>\n",
+       "      <td>233</td>\n",
+       "      <td>6</td>\n",
+       "      <td>843955</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>192</th>\n",
+       "      <td>234</td>\n",
        "      <td>8</td>\n",
        "      <td>846643</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>221</th>\n",
-       "      <td>236</td>\n",
-       "      <td>10</td>\n",
-       "      <td>849228</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>222</th>\n",
+       "      <th>193</th>\n",
        "      <td>237</td>\n",
-       "      <td>15</td>\n",
-       "      <td>852096</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>223</th>\n",
-       "      <td>238</td>\n",
        "      <td>19</td>\n",
        "      <td>858496</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>224</th>\n",
-       "      <td>239</td>\n",
+       "      <th>194</th>\n",
+       "      <td>238</td>\n",
        "      <td>16</td>\n",
        "      <td>862208</td>\n",
        "      <td>0</td>\n",
@@ -994,24 +1078,24 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>225 rows × 5 columns</p>\n",
+       "<p>195 rows × 5 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "     trial_numeric  TrialType  sample  sample_before  event\n",
-       "0                2          3   23270              0      1\n",
-       "1                3          8   27084              0      1\n",
-       "2                4         11   29952              0      1\n",
-       "3                6         16   36531              0      1\n",
-       "4                7          2   45158              0      1\n",
-       "..             ...        ...     ...            ...    ...\n",
-       "220            235          8  846643              0      1\n",
-       "221            236         10  849228              0      1\n",
-       "222            237         15  852096              0      1\n",
-       "223            238         19  858496              0      1\n",
-       "224            239         16  862208              0      1\n",
+       "     neural_trial_numeric  TrialType  sample  sample_before  event\n",
+       "0                       1          3   23270              0      1\n",
+       "1                       2          8   27084              0      1\n",
+       "2                       3         11   29952              0      1\n",
+       "3                       6          2   45158              0      1\n",
+       "4                       7         19   55014              0      1\n",
+       "..                    ...        ...     ...            ...    ...\n",
+       "190                   232          9  841139              0      1\n",
+       "191                   233          6  843955              0      1\n",
+       "192                   234          8  846643              0      1\n",
+       "193                   237         19  858496              0      1\n",
+       "194                   238         16  862208              0      1\n",
        "\n",
-       "[225 rows x 5 columns]"
+       "[195 rows x 5 columns]"
       ]
      },
      "execution_count": 4,
@@ -1032,16 +1116,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# filter to good epochs and fix trial indexing\n",
-    "last_away_data['trial_numeric'] = last_away_data['trial_numeric'] - 1\n",
-    "\n",
     "# create events\n",
     "last_away_events = last_away_data[['sample', 'sample_before', 'event']].copy().to_numpy()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "148a650d-fddf-4d14-9e16-d7a15aa4922f",
    "metadata": {},
    "outputs": [
@@ -1049,18 +1130,24 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Opening raw data file /home/brooke/pacman/preprocessing/LL10/ieeg/LL10_bp_raw_clean_data.fif...\n",
+      "    Range : 0 ... 1559659 =      0.000 ...  3046.209 secs\n",
+      "Ready.\n",
       "Not setting metadata\n",
-      "225 matching events found\n",
+      "195 matching events found\n",
       "No baseline correction applied\n",
       "0 projection items activated\n",
-      "Loading data for 225 events and 5121 original time points ...\n"
+      "Overwriting existing file.\n",
+      "Loading data for 195 events and 5121 original time points ...\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_46403/3409931828.py:7: RuntimeWarning: This filename (/home/brooke/pacman/preprocessing/LL10/ieeg/LL10_bp_raw_clean_last_away_events.fif) does not conform to MNE naming conventions. All epochs files should end with -epo.fif, -epo.fif.gz, _epo.fif or _epo.fif.gz\n",
+      "/tmp/ipykernel_5295/4054492422.py:2: RuntimeWarning: This filename (/home/brooke/pacman/preprocessing/LL10/ieeg/LL10_bp_raw_clean_data.fif) does not conform to MNE naming conventions. All raw files should end with raw.fif, raw_sss.fif, raw_tsss.fif, _meg.fif, _eeg.fif, _ieeg.fif, raw.fif.gz, raw_sss.fif.gz, raw_tsss.fif.gz, _meg.fif.gz, _eeg.fif.gz or _ieeg.fif.gz\n",
+      "  bp_raw_fif = mne.io.Raw(f\"{preproc_data_dir}/{subject}_bp_raw_clean_data.fif\")\n",
+      "/tmp/ipykernel_5295/4054492422.py:13: RuntimeWarning: This filename (/home/brooke/pacman/preprocessing/LL10/ieeg/LL10_bp_raw_clean_last_away_events.fif) does not conform to MNE naming conventions. All epochs files should end with -epo.fif, -epo.fif.gz, _epo.fif or _epo.fif.gz\n",
       "  last_away_epochs.save(f\"{preproc_data_dir}/{subject}_bp_raw_clean_last_away_events.fif\", overwrite = True, split_size = '1.9GB')\n"
      ]
     },
@@ -1070,11 +1157,17 @@
      "text": [
       "0 bad epochs dropped\n",
       "Loading data for 1 events and 5121 original time points ...\n",
-      "Loading data for 225 events and 5121 original time points ...\n"
+      "Loading data for 195 events and 5121 original time points ...\n"
      ]
     }
    ],
    "source": [
+    "# load data \n",
+    "bp_raw_fif = mne.io.Raw(f\"{preproc_data_dir}/{subject}_bp_raw_clean_data.fif\")\n",
+    "    \n",
+    "# only epoch good channels\n",
+    "channels_of_interest =  [x for x in bp_raw_fif.info['ch_names'] if x not in bp_raw_fif.info['bads']]\n",
+    "\n",
     "# epoch the data\n",
     "last_away_epochs = mne.Epochs(bp_raw_fif, last_away_events, \n",
     "                          event_id = 1, tmin = -5, tmax =5, \n",
