--- a/preprocessing/LL12/scripts/LL12_preprocessing.ipynb
+++ b/preprocessing/LL12/scripts/LL12_preprocessing.ipynb
@@ -537,14 +537,16 @@
      "text": [
       "Opening raw data file /home/brooke/pacman/preprocessing/LL12/ieeg/LL12_bp_raw_clean_data.fif...\n",
       "    Range : 0 ... 841719 =      0.000 ...  1643.982 secs\n",
-      "Ready.\n"
+      "Ready.\n",
+      "520 events found\n",
+      "Event IDs: [0 1]\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_475824/4119140940.py:4: RuntimeWarning: This filename (/home/brooke/pacman/preprocessing/LL12/ieeg/LL12_bp_raw_clean_data.fif) does not conform to MNE naming conventions. All raw files should end with raw.fif, raw_sss.fif, raw_tsss.fif, _meg.fif, _eeg.fif, _ieeg.fif, raw.fif.gz, raw_sss.fif.gz, raw_tsss.fif.gz, _meg.fif.gz, _eeg.fif.gz or _ieeg.fif.gz\n",
+      "/tmp/ipykernel_10844/4119140940.py:4: RuntimeWarning: This filename (/home/brooke/pacman/preprocessing/LL12/ieeg/LL12_bp_raw_clean_data.fif) does not conform to MNE naming conventions. All raw files should end with raw.fif, raw_sss.fif, raw_tsss.fif, _meg.fif, _eeg.fif, _ieeg.fif, raw.fif.gz, raw_sss.fif.gz, raw_tsss.fif.gz, _meg.fif.gz, _eeg.fif.gz or _ieeg.fif.gz\n",
       "  bp_raw_fif = mne.io.Raw(f\"{preproc_data_dir}/{subject}_bp_raw_clean_data.fif\")\n"
      ]
     },
@@ -552,12 +554,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "520 events found\n",
-      "Event IDs: [0 1]\n",
       "Not setting metadata\n",
       "260 matching events found\n",
       "No baseline correction applied\n",
       "0 projection items activated\n",
+      "Overwriting existing file.\n",
       "Loading data for 260 events and 5121 original time points ...\n"
      ]
     },
@@ -565,7 +566,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_475824/4119140940.py:18: RuntimeWarning: This filename (/home/brooke/pacman/preprocessing/LL12/ieeg/LL12_bp_clean_end-locked_ieeg.fif) does not conform to MNE naming conventions. All epochs files should end with -epo.fif, -epo.fif.gz, _epo.fif or _epo.fif.gz\n",
+      "/tmp/ipykernel_10844/4119140940.py:18: RuntimeWarning: This filename (/home/brooke/pacman/preprocessing/LL12/ieeg/LL12_bp_clean_end-locked_ieeg.fif) does not conform to MNE naming conventions. All epochs files should end with -epo.fif, -epo.fif.gz, _epo.fif or _epo.fif.gz\n",
       "  epoched_data.save(f\"{preproc_data_dir}/{subject}_bp_clean_end-locked_ieeg.fif\", overwrite = True, split_size = '1.9GB')\n"
      ]
     },
@@ -610,7 +611,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "id": "c865f1da-e02b-4bc3-bc26-7d6a674088b7",
    "metadata": {},
    "outputs": [
@@ -635,7 +636,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>trial_numeric</th>\n",
+       "      <th>neural_trial_numeric</th>\n",
        "      <th>TrialType</th>\n",
        "      <th>sample</th>\n",
        "      <th>sample_before</th>\n",
@@ -645,23 +646,23 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
+       "      <td>0</td>\n",
        "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>16665</td>\n",
+       "      <td>16640</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>2</td>\n",
+       "      <td>1</td>\n",
        "      <td>14</td>\n",
-       "      <td>19379</td>\n",
+       "      <td>19353</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>3</td>\n",
+       "      <td>2</td>\n",
        "      <td>13</td>\n",
        "      <td>22195</td>\n",
        "      <td>0</td>\n",
@@ -669,15 +670,15 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>4</td>\n",
+       "      <td>3</td>\n",
        "      <td>6</td>\n",
-       "      <td>25113</td>\n",
+       "      <td>25088</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>5</td>\n",
+       "      <td>4</td>\n",
        "      <td>18</td>\n",
        "      <td>29337</td>\n",
        "      <td>0</td>\n",
@@ -692,68 +693,68 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>238</th>\n",
-       "      <td>256</td>\n",
+       "      <th>211</th>\n",
+       "      <td>255</td>\n",
        "      <td>11</td>\n",
-       "      <td>807603</td>\n",
+       "      <td>806374</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>239</th>\n",
-       "      <td>257</td>\n",
+       "      <th>212</th>\n",
+       "      <td>256</td>\n",
        "      <td>7</td>\n",
-       "      <td>809804</td>\n",
+       "      <td>808985</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>240</th>\n",
-       "      <td>258</td>\n",
+       "      <th>213</th>\n",
+       "      <td>257</td>\n",
        "      <td>2</td>\n",
-       "      <td>812595</td>\n",
+       "      <td>811545</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>241</th>\n",
-       "      <td>259</td>\n",
+       "      <th>214</th>\n",
+       "      <td>258</td>\n",
        "      <td>14</td>\n",
-       "      <td>815206</td>\n",
+       "      <td>814208</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>242</th>\n",
-       "      <td>260</td>\n",
+       "      <th>215</th>\n",
+       "      <td>259</td>\n",
        "      <td>13</td>\n",
-       "      <td>818995</td>\n",
+       "      <td>817510</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>243 rows × 5 columns</p>\n",
+       "<p>216 rows × 5 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "     trial_numeric  TrialType  sample  sample_before  event\n",
-       "0                1          1   16665              0      1\n",
-       "1                2         14   19379              0      1\n",
-       "2                3         13   22195              0      1\n",
-       "3                4          6   25113              0      1\n",
-       "4                5         18   29337              0      1\n",
-       "..             ...        ...     ...            ...    ...\n",
-       "238            256         11  807603              0      1\n",
-       "239            257          7  809804              0      1\n",
-       "240            258          2  812595              0      1\n",
-       "241            259         14  815206              0      1\n",
-       "242            260         13  818995              0      1\n",
+       "     neural_trial_numeric  TrialType  sample  sample_before  event\n",
+       "0                       0          1   16640              0      1\n",
+       "1                       1         14   19353              0      1\n",
+       "2                       2         13   22195              0      1\n",
+       "3                       3          6   25088              0      1\n",
+       "4                       4         18   29337              0      1\n",
+       "..                    ...        ...     ...            ...    ...\n",
+       "211                   255         11  806374              0      1\n",
+       "212                   256          7  808985              0      1\n",
+       "213                   257          2  811545              0      1\n",
+       "214                   258         14  814208              0      1\n",
+       "215                   259         13  817510              0      1\n",
        "\n",
-       "[243 rows x 5 columns]"
+       "[216 rows x 5 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -766,21 +767,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "id": "dd41c5cd-0432-4bdd-b17d-68ea18a74802",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# filter to good epochs and fix trial indexing\n",
-    "last_away_data['trial_numeric'] = last_away_data['trial_numeric'] - 1\n",
-    "\n",
     "# create events\n",
     "last_away_events = last_away_data[['sample', 'sample_before', 'event']].copy().to_numpy()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "id": "f394447b-f502-4ccb-a7dd-913f458f896b",
    "metadata": {},
    "outputs": [
@@ -789,17 +787,18 @@
      "output_type": "stream",
      "text": [
       "Not setting metadata\n",
-      "243 matching events found\n",
+      "216 matching events found\n",
       "No baseline correction applied\n",
       "0 projection items activated\n",
-      "Loading data for 243 events and 5121 original time points ...\n"
+      "Overwriting existing file.\n",
+      "Loading data for 216 events and 5121 original time points ...\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_455631/3409931828.py:7: RuntimeWarning: This filename (/home/brooke/pacman/preprocessing/LL12/ieeg/LL12_bp_raw_clean_last_away_events.fif) does not conform to MNE naming conventions. All epochs files should end with -epo.fif, -epo.fif.gz, _epo.fif or _epo.fif.gz\n",
+      "/tmp/ipykernel_10844/3409931828.py:7: RuntimeWarning: This filename (/home/brooke/pacman/preprocessing/LL12/ieeg/LL12_bp_raw_clean_last_away_events.fif) does not conform to MNE naming conventions. All epochs files should end with -epo.fif, -epo.fif.gz, _epo.fif or _epo.fif.gz\n",
       "  last_away_epochs.save(f\"{preproc_data_dir}/{subject}_bp_raw_clean_last_away_events.fif\", overwrite = True, split_size = '1.9GB')\n"
      ]
     },
@@ -809,7 +808,7 @@
      "text": [
       "0 bad epochs dropped\n",
       "Loading data for 1 events and 5121 original time points ...\n",
-      "Loading data for 243 events and 5121 original time points ...\n"
+      "Loading data for 216 events and 5121 original time points ...\n"
      ]
     }
    ],
