--- a/preprocessing/LL13/scripts/LL13_preprocessing.ipynb
+++ b/preprocessing/LL13/scripts/LL13_preprocessing.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 1,
    "id": "7124d816-0294-4977-b65a-64ec8a13910a",
    "metadata": {},
    "outputs": [],
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 2,
    "id": "94f406bc-b9b2-420c-9215-95f89152e6d6",
    "metadata": {},
    "outputs": [],
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 2,
    "id": "d7d0fa71-30b2-4684-ad96-1e5b7c05a39a",
    "metadata": {},
    "outputs": [],
@@ -542,6 +542,90 @@
   },
   {
    "cell_type": "markdown",
+   "id": "1044aba1-1526-4485-8e97-cf0520b4e5f2",
+   "metadata": {},
+   "source": [
+    "## Trial End"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "080eb327-41a4-453d-91e6-e9ee1b7596ac",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Opening raw data file /home/brooke/pacman/preprocessing/LL13/ieeg/LL13_bp_raw_clean_data.fif...\n",
+      "    Range : 0 ... 901099 =      0.000 ...  1759.959 secs\n",
+      "Ready.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_138542/4119140940.py:4: RuntimeWarning: This filename (/home/brooke/pacman/preprocessing/LL13/ieeg/LL13_bp_raw_clean_data.fif) does not conform to MNE naming conventions. All raw files should end with raw.fif, raw_sss.fif, raw_tsss.fif, _meg.fif, _eeg.fif, _ieeg.fif, raw.fif.gz, raw_sss.fif.gz, raw_tsss.fif.gz, _meg.fif.gz, _eeg.fif.gz or _ieeg.fif.gz\n",
+      "  bp_raw_fif = mne.io.Raw(f\"{preproc_data_dir}/{subject}_bp_raw_clean_data.fif\")\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "480 events found\n",
+      "Event IDs: [0 1]\n",
+      "Not setting metadata\n",
+      "240 matching events found\n",
+      "No baseline correction applied\n",
+      "0 projection items activated\n",
+      "Overwriting existing file.\n",
+      "Loading data for 240 events and 5121 original time points ...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_138542/4119140940.py:18: RuntimeWarning: This filename (/home/brooke/pacman/preprocessing/LL13/ieeg/LL13_bp_clean_end-locked_ieeg.fif) does not conform to MNE naming conventions. All epochs files should end with -epo.fif, -epo.fif.gz, _epo.fif or _epo.fif.gz\n",
+      "  epoched_data.save(f\"{preproc_data_dir}/{subject}_bp_clean_end-locked_ieeg.fif\", overwrite = True, split_size = '1.9GB')\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 bad epochs dropped\n",
+      "Loading data for 1 events and 5121 original time points ...\n",
+      "Loading data for 239 events and 5121 original time points ...\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Epoching the raw data ##\n",
+    "\n",
+    "# load data \n",
+    "bp_raw_fif = mne.io.Raw(f\"{preproc_data_dir}/{subject}_bp_raw_clean_data.fif\")\n",
+    "events = mne.find_events(bp_raw_fif, output='step', consecutive = False, stim_channel='STI')\n",
+    "\n",
+    "# create events\n",
+    "    \n",
+    "# only epoch good channels\n",
+    "channels_of_interest =  [x for x in bp_raw_fif.info['ch_names'] if x not in bp_raw_fif.info['bads']]\n",
+    "\n",
+    "# epoch the data\n",
+    "epoched_data = mne.Epochs(bp_raw_fif, events, \n",
+    "                          event_id = 0, tmin = -5, tmax = 5, \n",
+    "                          baseline = None, picks = channels_of_interest,\n",
+    "                             reject_by_annotation = False)\n",
+    "# save the data\n",
+    "epoched_data.save(f\"{preproc_data_dir}/{subject}_bp_clean_end-locked_ieeg.fif\", overwrite = True, split_size = '1.9GB')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "583289cc-2b7c-4dba-ae1b-72c9c8e76a1a",
    "metadata": {},
    "source": [
@@ -550,7 +634,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 5,
    "id": "c865f1da-e02b-4bc3-bc26-7d6a674088b7",
    "metadata": {},
    "outputs": [
@@ -575,7 +659,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>trial_numeric</th>\n",
+       "      <th>neural_trial_numeric</th>\n",
        "      <th>TrialType</th>\n",
        "      <th>sample</th>\n",
        "      <th>sample_before</th>\n",
@@ -585,41 +669,41 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>2</td>\n",
-       "      <td>15</td>\n",
-       "      <td>29004</td>\n",
+       "      <td>3</td>\n",
+       "      <td>11</td>\n",
+       "      <td>39347</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>3</td>\n",
-       "      <td>1</td>\n",
-       "      <td>34073</td>\n",
+       "      <td>4</td>\n",
+       "      <td>8</td>\n",
+       "      <td>41523</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>4</td>\n",
-       "      <td>11</td>\n",
-       "      <td>39372</td>\n",
+       "      <td>5</td>\n",
+       "      <td>16</td>\n",
+       "      <td>46054</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>8</td>\n",
-       "      <td>3</td>\n",
-       "      <td>52019</td>\n",
+       "      <td>6</td>\n",
+       "      <td>10</td>\n",
+       "      <td>47795</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>9</td>\n",
-       "      <td>14</td>\n",
-       "      <td>54681</td>\n",
+       "      <td>7</td>\n",
+       "      <td>3</td>\n",
+       "      <td>51993</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
@@ -632,68 +716,68 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>211</th>\n",
-       "      <td>235</td>\n",
+       "      <th>220</th>\n",
+       "      <td>234</td>\n",
        "      <td>18</td>\n",
-       "      <td>852531</td>\n",
+       "      <td>851404</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>212</th>\n",
-       "      <td>236</td>\n",
+       "      <th>221</th>\n",
+       "      <td>235</td>\n",
        "      <td>19</td>\n",
-       "      <td>856524</td>\n",
+       "      <td>855321</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>213</th>\n",
-       "      <td>237</td>\n",
+       "      <th>222</th>\n",
+       "      <td>236</td>\n",
        "      <td>20</td>\n",
-       "      <td>859904</td>\n",
+       "      <td>858393</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>214</th>\n",
-       "      <td>238</td>\n",
+       "      <th>223</th>\n",
+       "      <td>237</td>\n",
        "      <td>9</td>\n",
-       "      <td>863795</td>\n",
+       "      <td>863104</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>215</th>\n",
-       "      <td>239</td>\n",
+       "      <th>224</th>\n",
+       "      <td>238</td>\n",
        "      <td>16</td>\n",
-       "      <td>866508</td>\n",
+       "      <td>865817</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>216 rows × 5 columns</p>\n",
+       "<p>225 rows × 5 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "     trial_numeric  TrialType  sample  sample_before  event\n",
-       "0                2         15   29004              0      1\n",
-       "1                3          1   34073              0      1\n",
-       "2                4         11   39372              0      1\n",
-       "3                8          3   52019              0      1\n",
-       "4                9         14   54681              0      1\n",
-       "..             ...        ...     ...            ...    ...\n",
-       "211            235         18  852531              0      1\n",
-       "212            236         19  856524              0      1\n",
-       "213            237         20  859904              0      1\n",
-       "214            238          9  863795              0      1\n",
-       "215            239         16  866508              0      1\n",
+       "     neural_trial_numeric  TrialType  sample  sample_before  event\n",
+       "0                       3         11   39347              0      1\n",
+       "1                       4          8   41523              0      1\n",
+       "2                       5         16   46054              0      1\n",
+       "3                       6         10   47795              0      1\n",
+       "4                       7          3   51993              0      1\n",
+       "..                    ...        ...     ...            ...    ...\n",
+       "220                   234         18  851404              0      1\n",
+       "221                   235         19  855321              0      1\n",
+       "222                   236         20  858393              0      1\n",
+       "223                   237          9  863104              0      1\n",
+       "224                   238         16  865817              0      1\n",
        "\n",
-       "[216 rows x 5 columns]"
+       "[225 rows x 5 columns]"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -706,13 +790,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 6,
    "id": "dd41c5cd-0432-4bdd-b17d-68ea18a74802",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# filter to good epochs and fix trial indexing\n",
-    "last_away_data['trial_numeric'] = last_away_data['trial_numeric'] - 1\n",
     "\n",
     "# create events\n",
     "last_away_events = last_away_data[['sample', 'sample_before', 'event']].copy().to_numpy()\n"
@@ -720,7 +802,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 7,
    "id": "f394447b-f502-4ccb-a7dd-913f458f896b",
    "metadata": {},
    "outputs": [
@@ -729,17 +811,18 @@
      "output_type": "stream",
      "text": [
       "Not setting metadata\n",
-      "216 matching events found\n",
+      "225 matching events found\n",
       "No baseline correction applied\n",
       "0 projection items activated\n",
-      "Loading data for 216 events and 5121 original time points ...\n"
+      "Overwriting existing file.\n",
+      "Loading data for 225 events and 5121 original time points ...\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_384301/3409931828.py:7: RuntimeWarning: This filename (/home/brooke/pacman/preprocessing/LL13/ieeg/LL13_bp_raw_clean_last_away_events.fif) does not conform to MNE naming conventions. All epochs files should end with -epo.fif, -epo.fif.gz, _epo.fif or _epo.fif.gz\n",
+      "/tmp/ipykernel_10008/3409931828.py:7: RuntimeWarning: This filename (/home/brooke/pacman/preprocessing/LL13/ieeg/LL13_bp_raw_clean_last_away_events.fif) does not conform to MNE naming conventions. All epochs files should end with -epo.fif, -epo.fif.gz, _epo.fif or _epo.fif.gz\n",
       "  last_away_epochs.save(f\"{preproc_data_dir}/{subject}_bp_raw_clean_last_away_events.fif\", overwrite = True, split_size = '1.9GB')\n"
      ]
     },
@@ -749,7 +832,7 @@
      "text": [
       "0 bad epochs dropped\n",
       "Loading data for 1 events and 5121 original time points ...\n",
-      "Loading data for 216 events and 5121 original time points ...\n"
+      "Loading data for 225 events and 5121 original time points ...\n"
      ]
     }
    ],
