--- a/script_templates/trial_onset.ipynb
+++ b/script_templates/trial_onset.ipynb
@@ -32,6 +32,7 @@
     "import scipy\n",
     "import joblib\n",
     "import h5io\n",
+    "import dask.array as da \n",
     "\n",
     "import statsmodels\n",
     "from statsmodels import stats\n",
@@ -199,13 +200,17 @@
     "    TFR = mne.time_frequency.tfr_morlet(epochs,freqs,n_cycles,return_itc=False,\n",
     "                                            average=False,  n_jobs = workers)\n",
     "    print('log transforming')\n",
-    "    TFR.data = np.log(TFR.data)\n",
+    "    TFR.data = da.from_array(TFR.data, chunks=\"auto\")  # Convert the data to a Dask array\n",
+    "    TFR.data = da.log(TFR.data)  # Compute the element-wise log\n",
+    "\n",
     "    if zscore:\n",
     "        print('z-scoring to baseline')\n",
-    "        bix = [a and b  for a, b in zip(TFR.times >= baseline[0], TFR.times <= baseline[1])]\n",
-    "        bmean = TFR.data[:,:,:,bix].mean(axis=(3),keepdims=True)\n",
-    "        bstd = TFR.data[:,:,:,bix].std(axis=(3),keepdims=True)\n",
+    "        bix = [a and b for a, b in zip(TFR.times >= baseline[0], TFR.times <= baseline[1])]\n",
+    "        bmean = TFR.data[:, :, :, bix].mean(axis=(3), keepdims=True)\n",
+    "        bstd = TFR.data[:, :, :, bix].std(axis=(3), keepdims=True)\n",
     "        TFR.data = (TFR.data - bmean) / bstd\n",
+    "\n",
+    "    TFR.data = TFR.data.compute()  # Convert the Dask array back to a NumPy array\n",
     "    return TFR\n",
     "\n",
     "def extract_freqs(lower_freq, higher_freq, freq_band, subdir, ROI, label, TFR, trials):\n",
@@ -364,7 +369,7 @@
    "source": [
     "# save TFRs\n",
     "\n",
-    "roi_pres_TFR.save(f\"/home/brooke/pacman/preprocessing/{subject}/ieeg/trial_onset/hc-tfr.h5\")"
+    "roi_pres_TFR.save(f\"/home/brooke/pacman/preprocessing/{subject}/ieeg/trial_onset/hc-tfr.h5\", overwrite = True)"
    ]
   },
   {
@@ -374,15 +379,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.rcParams['figure.figsize'] = [14, 11]\n",
+    "plt.rcParams['figure.figsize'] = [22, 20]\n",
+    "plt.rcParams.update({'font.size': 18})\n",
     "\n",
     "\n",
-    "fig, ax = plt.subplots()\n",
+    "fig, ax = plt.subplots(figsize = (22, 20))\n",
     "i = ax.imshow(roi_pres_TFR.data.mean(axis = 0).mean(axis = 0), cmap = 'RdBu_r', interpolation=\"none\", origin=\"lower\", aspect = 'auto', extent=[-1, 5, freqs[0], freqs[-1]], vmin = -.2, vmax = .2)\n",
     "ax.set_yticks(np.linspace(np.min(roi_pres_TFR.freqs),np.max(roi_pres_TFR.freqs),len(roi_pres_TFR.freqs)))\n",
     "ax.set_yticklabels(np.round(roi_pres_TFR.freqs))\n",
     "bar = plt.colorbar(i)\n",
-    "ax.set_title(\"Average Hippocampal TFR at Trial Onset\")\n",
+    "ax.set_title(f\"Average Hippocampal TFR at Trial Onset, n={len(hc_list)}\", fontsize=22, fontweight = 'bold')\n",
     "fig.savefig(f'figures/{subject}_average_hc_trialonset.png', dpi=600)\n",
     "fig.show()\n"
    ]
@@ -404,12 +410,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.rcParams['figure.figsize'] = [14, 11]\n",
+    "plt.rcParams['figure.figsize'] = [22, 20]\n",
     "\n",
     "chix = 0\n",
     "for ch in roi_pres_TFR.ch_names:\n",
     "\n",
-    "    fig, ax = plt.subplots()\n",
+    "    fig, ax = plt.subplots(figsize = (22, 20))\n",
     "    i = ax.imshow(roi_pres_TFR.data[:, chix, :, :].mean(axis = 0), cmap = 'RdBu_r', interpolation=\"none\", origin=\"lower\", aspect = 'auto', extent=[-1, 5, freqs[0], freqs[-1]], vmin = -.4, vmax = .4)\n",
     "    ax.set_yticks(np.linspace(np.min(roi_pres_TFR.freqs),np.max(roi_pres_TFR.freqs),len(roi_pres_TFR.freqs)))\n",
     "    ax.set_yticklabels(np.round(roi_pres_TFR.freqs))\n",
@@ -528,7 +534,7 @@
    "source": [
     "# save TFRs\n",
     "\n",
-    "roi_pres_TFR.save(f\"/home/brooke/pacman/preprocessing/{subject}/ieeg/trial_onset/ofc-tfr.h5\")"
+    "roi_pres_TFR.save(f\"/home/brooke/pacman/preprocessing/{subject}/ieeg/trial_onset/ofc-tfr.h5\", overwrite = True)"
    ]
   },
   {
@@ -538,14 +544,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.rcParams['figure.figsize'] = [14, 11]\n",
+    "plt.rcParams['figure.figsize'] = [22, 20]\n",
     "\n",
-    "fig, ax = plt.subplots()\n",
+    "fig, ax = plt.subplots(figsize = (22, 20))\n",
     "i = ax.imshow(roi_pres_TFR.data.mean(axis = 0).mean(axis = 0), cmap = 'RdBu_r', interpolation=\"none\", origin=\"lower\", aspect = 'auto', extent=[-1, 5, freqs[0], freqs[-1]], vmin = -.2, vmax = .2)\n",
     "ax.set_yticks(np.linspace(np.min(roi_pres_TFR.freqs),np.max(roi_pres_TFR.freqs),len(roi_pres_TFR.freqs)))\n",
     "ax.set_yticklabels(np.round(roi_pres_TFR.freqs))\n",
     "bar = plt.colorbar(i)\n",
-    "ax.set_title(\"Average OFC TFR at Trial Onset\")\n",
+    "ax.set_title(f\"Average OFC TFR at Trial Onset, n={len(hc_list)}\", fontsize=22, fontweight = 'bold')\n",
     "fig.savefig(f'figures/{subject}_average_ofc_trialonset.png', dpi=600)\n",
     "fig.show()\n"
    ]
@@ -567,12 +573,12 @@
    },
    "outputs": [],
    "source": [
-    "plt.rcParams['figure.figsize'] = [14, 11]\n",
+    "plt.rcParams['figure.figsize'] = [22, 20]\n",
     "\n",
     "chix = 0\n",
     "for ch in roi_pres_TFR.ch_names:\n",
     "\n",
-    "    fig, ax = plt.subplots()\n",
+    "    fig, ax = plt.subplots(figsize = (22, 20))\n",
     "    i = ax.imshow(roi_pres_TFR.data[:, chix, :, :].mean(axis = 0), cmap = 'RdBu_r', interpolation=\"none\", origin=\"lower\", aspect = 'auto', extent=[-1, 5, freqs[0], freqs[-1]], vmin = -.4, vmax = .4)\n",
     "    ax.set_yticks(np.linspace(np.min(roi_pres_TFR.freqs),np.max(roi_pres_TFR.freqs),len(roi_pres_TFR.freqs)))\n",
     "    ax.set_yticklabels(np.round(roi_pres_TFR.freqs))\n",
@@ -689,7 +695,7 @@
    "source": [
     "# save TFRs\n",
     "\n",
-    "roi_pres_TFR.save(f\"/home/brooke/pacman/preprocessing/{subject}/ieeg/trial_onset/amyg-tfr.h5\")"
+    "roi_pres_TFR.save(f\"/home/brooke/pacman/preprocessing/{subject}/ieeg/trial_onset/amyg-tfr.h5\", overwrite = True)"
    ]
   },
   {
@@ -699,14 +705,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.rcParams['figure.figsize'] = [14, 11]\n",
+    "plt.rcParams['figure.figsize'] = [22, 20]\n",
     "\n",
-    "fig, ax = plt.subplots()\n",
+    "fig, ax = plt.subplots(figsize = (22, 20))\n",
     "i = ax.imshow(roi_pres_TFR.data.mean(axis = 0).mean(axis = 0), cmap = 'RdBu_r', interpolation=\"none\", origin=\"lower\", aspect = 'auto', extent=[-1, 5, freqs[0], freqs[-1]], vmin =-.2, vmax = .2)\n",
     "ax.set_yticks(np.linspace(np.min(roi_pres_TFR.freqs),np.max(roi_pres_TFR.freqs),len(roi_pres_TFR.freqs)))\n",
     "ax.set_yticklabels(np.round(roi_pres_TFR.freqs))\n",
     "bar = plt.colorbar(i)\n",
-    "ax.set_title(\"Average Amygdala TFR at Trial Onset\")\n",
+    "ax.set_title(f\"Average Amygdala TFR at Trial Onset, n={len(hc_list)}\", fontsize=22, fontweight = 'bold')\n",
     "fig.savefig(f'figures/{subject}_average_amyg_trialonset.png', dpi=600)\n",
     "fig.show()\n"
    ]
@@ -726,12 +732,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.rcParams['figure.figsize'] = [14, 11]\n",
+    "plt.rcParams['figure.figsize'] = [22, 20]\n",
     "\n",
     "chix = 0\n",
     "for ch in roi_pres_TFR.ch_names:\n",
     "\n",
-    "    fig, ax = plt.subplots()\n",
+    "    fig, ax = plt.subplots(figsize = (22, 20))\n",
     "    i = ax.imshow(roi_pres_TFR.data[:, chix, :, :].mean(axis = 0), cmap = 'RdBu_r', interpolation=\"none\", origin=\"lower\", aspect = 'auto', extent=[-1, 5, freqs[0], freqs[-1]], vmin = -.4, vmax = .4)\n",
     "    ax.set_yticks(np.linspace(np.min(roi_pres_TFR.freqs),np.max(roi_pres_TFR.freqs),len(roi_pres_TFR.freqs)))\n",
     "    ax.set_yticklabels(np.round(roi_pres_TFR.freqs))\n",
@@ -849,7 +855,7 @@
    "source": [
     "# save TFRs\n",
     "\n",
-    "roi_pres_TFR.save(f\"/home/brooke/pacman/preprocessing/{subject}/ieeg/trial_onset/cing-tfr.h5\")"
+    "roi_pres_TFR.save(f\"/home/brooke/pacman/preprocessing/{subject}/ieeg/trial_onset/cing-tfr.h5\", overwrite = True)"
    ]
   },
   {
@@ -859,14 +865,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.rcParams['figure.figsize'] = [14, 11]\n",
+    "plt.rcParams['figure.figsize'] = [22, 20]\n",
     "\n",
-    "fig, ax = plt.subplots()\n",
+    "fig, ax = plt.subplots(figsize = (22, 20))\n",
     "i = ax.imshow(roi_pres_TFR.data.mean(axis = 0).mean(axis = 0), cmap = 'RdBu_r', interpolation=\"none\", origin=\"lower\", aspect = 'auto', extent=[-1, 5, freqs[0], freqs[-1]], vmin =-.2, vmax = .2)\n",
     "ax.set_yticks(np.linspace(np.min(roi_pres_TFR.freqs),np.max(roi_pres_TFR.freqs),len(roi_pres_TFR.freqs)))\n",
     "ax.set_yticklabels(np.round(roi_pres_TFR.freqs))\n",
     "bar = plt.colorbar(i)\n",
-    "ax.set_title(\"Average Cingulate TFR at Trial Onset\")\n",
+    "ax.set_title(f\"Average Cingulate TFR at Trial Onset, n={len(hc_list)}\", fontsize=22, fontweight = 'bold')\n",
     "fig.savefig(f'figures/{subject}_average_cing_trialonset.png', dpi=600)\n",
     "fig.show()\n"
    ]
@@ -886,12 +892,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.rcParams['figure.figsize'] = [14, 11]\n",
+    "plt.rcParams['figure.figsize'] = [22, 20]\n",
     "\n",
     "chix = 0\n",
     "for ch in roi_pres_TFR.ch_names:\n",
     "\n",
-    "    fig, ax = plt.subplots()\n",
+    "    fig, ax = plt.subplots(figsize = (22, 20))\n",
     "    i = ax.imshow(roi_pres_TFR.data[:, chix, :, :].mean(axis = 0), cmap = 'RdBu_r', interpolation=\"none\", origin=\"lower\", aspect = 'auto', extent=[-1, 5, freqs[0], freqs[-1]], vmin = -.4, vmax = .4)\n",
     "    ax.set_yticks(np.linspace(np.min(roi_pres_TFR.freqs),np.max(roi_pres_TFR.freqs),len(roi_pres_TFR.freqs)))\n",
     "    ax.set_yticklabels(np.round(roi_pres_TFR.freqs))\n",
@@ -1016,7 +1022,7 @@
    "source": [
     "# save TFRs\n",
     "\n",
-    "roi_pres_TFR.save(f\"/home/brooke/pacman/preprocessing/{subject}/ieeg/trial_onset/insula-tfr.h5\")"
+    "roi_pres_TFR.save(f\"/home/brooke/pacman/preprocessing/{subject}/ieeg/trial_onset/insula-tfr.h5\", overwrite = True)"
    ]
   },
   {
@@ -1028,12 +1034,12 @@
    "source": [
     "plt.rcParams['figure.figsize'] = [15, 11]\n",
     "\n",
-    "fig, ax = plt.subplots()\n",
+    "fig, ax = plt.subplots(figsize = (22, 20))\n",
     "i = ax.imshow(roi_pres_TFR.data.mean(axis = 0).mean(axis = 0), cmap = 'RdBu_r', interpolation=\"none\", origin=\"lower\", aspect = 'auto', extent=[-1, 5, freqs[0], freqs[-1]], vmin =-.2, vmax = .2)\n",
     "ax.set_yticks(np.linspace(np.min(roi_pres_TFR.freqs),np.max(roi_pres_TFR.freqs),len(roi_pres_TFR.freqs)))\n",
     "ax.set_yticklabels(np.round(roi_pres_TFR.freqs))\n",
     "bar = plt.colorbar(i)\n",
-    "ax.set_title(\"Average Insula TFR at Trial Onset\")\n",
+    "ax.set_title(f\"Average Insula TFR at Trial Onset, n={len(hc_list)}\", fontsize=22, fontweight = 'bold')\n",
     "fig.savefig(f'figures/{subject}_average_insula_trialonset.png', dpi=600)\n",
     "fig.show()\n"
    ]
@@ -1058,7 +1064,7 @@
     "chix = 0\n",
     "for ch in roi_pres_TFR.ch_names:\n",
     "\n",
-    "    fig, ax = plt.subplots()\n",
+    "    fig, ax = plt.subplots(figsize = (22, 20))\n",
     "    i = ax.imshow(roi_pres_TFR.data[:, chix, :, :].mean(axis = 0), cmap = 'RdBu_r', interpolation=\"none\", origin=\"lower\", aspect = 'auto', extent=[-1, 5, freqs[0], freqs[-1]], vmin = -.4, vmax = .4)\n",
     "    ax.set_yticks(np.linspace(np.min(roi_pres_TFR.freqs),np.max(roi_pres_TFR.freqs),len(roi_pres_TFR.freqs)))\n",
     "    ax.set_yticklabels(np.round(roi_pres_TFR.freqs))\n",
@@ -1175,7 +1181,7 @@
    "source": [
     "# save TFRs\n",
     "\n",
-    "roi_pres_TFR.save(f\"/home/brooke/pacman/preprocessing/{subject}/ieeg/trial_onset/dlpfc-tfr.h5\")"
+    "roi_pres_TFR.save(f\"/home/brooke/pacman/preprocessing/{subject}/ieeg/trial_onset/dlpfc-tfr.h5\", overwrite = True)"
    ]
   },
   {
@@ -1187,12 +1193,12 @@
    "source": [
     "plt.rcParams['figure.figsize'] = [15, 11]\n",
     "\n",
-    "fig, ax = plt.subplots()\n",
+    "fig, ax = plt.subplots(figsize = (22, 20))\n",
     "i = ax.imshow(roi_pres_TFR.data.mean(axis = 0).mean(axis = 0), cmap = 'RdBu_r', interpolation=\"none\", origin=\"lower\", aspect = 'auto', extent=[-1, 5, freqs[0], freqs[-1]], vmin =-.2, vmax = .2)\n",
     "ax.set_yticks(np.linspace(np.min(roi_pres_TFR.freqs),np.max(roi_pres_TFR.freqs),len(roi_pres_TFR.freqs)))\n",
     "ax.set_yticklabels(np.round(roi_pres_TFR.freqs))\n",
     "bar = plt.colorbar(i)\n",
-    "ax.set_title(\"Average dlPFC TFR at Trial Onset\")\n",
+    "ax.set_title(f\"Average dlPFC TFR at Trial Onset, n={len(hc_list)}\", fontsize=22, fontweight = 'bold')\n",
     "fig.savefig(f'figures/{subject}_average_dlpfc_trialonset.png', dpi=600)\n",
     "fig.show()\n"
    ]
@@ -1217,7 +1223,7 @@
     "chix = 0\n",
     "for ch in roi_pres_TFR.ch_names:\n",
     "\n",
-    "    fig, ax = plt.subplots()\n",
+    "    fig, ax = plt.subplots(figsize = (22, 20))\n",
     "    i = ax.imshow(roi_pres_TFR.data[:, chix, :, :].mean(axis = 0), cmap = 'RdBu_r', interpolation=\"none\", origin=\"lower\", aspect = 'auto', extent=[-1, 5, freqs[0], freqs[-1]], vmin = -.4, vmax = .4)\n",
     "    ax.set_yticks(np.linspace(np.min(roi_pres_TFR.freqs),np.max(roi_pres_TFR.freqs),len(roi_pres_TFR.freqs)))\n",
     "    ax.set_yticklabels(np.round(roi_pres_TFR.freqs))\n",
@@ -1334,7 +1340,7 @@
    "source": [
     "# save TFRs\n",
     "\n",
-    "roi_pres_TFR.save(f\"/home/brooke/pacman/preprocessing/{subject}/ieeg/trial_onset/ec-tfr.h5\")"
+    "roi_pres_TFR.save(f\"/home/brooke/pacman/preprocessing/{subject}/ieeg/trial_onset/ec-tfr.h5\", overwrite = True)"
    ]
   },
   {
@@ -1346,12 +1352,12 @@
    "source": [
     "plt.rcParams['figure.figsize'] = [15, 11]\n",
     "\n",
-    "fig, ax = plt.subplots()\n",
+    "fig, ax = plt.subplots(figsize = (22, 20))\n",
     "i = ax.imshow(roi_pres_TFR.data.mean(axis = 0).mean(axis = 0), cmap = 'RdBu_r', interpolation=\"none\", origin=\"lower\", aspect = 'auto', extent=[-1, 5, freqs[0], freqs[-1]], vmin =-.2, vmax = .2)\n",
     "ax.set_yticks(np.linspace(np.min(roi_pres_TFR.freqs),np.max(roi_pres_TFR.freqs),len(roi_pres_TFR.freqs)))\n",
     "ax.set_yticklabels(np.round(roi_pres_TFR.freqs))\n",
     "bar = plt.colorbar(i)\n",
-    "ax.set_title(\"Average EC TFR at Trial Onset\")\n",
+    "ax.set_title(f\"Average EC TFR at Trial Onset, n={len(hc_list)}\", fontsize=22, fontweight = 'bold')\n",
     "fig.savefig(f'figures/{subject}_average_ec_trialonset.png', dpi=600)\n",
     "fig.show()\n"
    ]
@@ -1376,7 +1382,7 @@
     "chix = 0\n",
     "for ch in roi_pres_TFR.ch_names:\n",
     "\n",
-    "    fig, ax = plt.subplots()\n",
+    "    fig, ax = plt.subplots(figsize = (22, 20))\n",
     "    i = ax.imshow(roi_pres_TFR.data[:, chix, :, :].mean(axis = 0), cmap = 'RdBu_r', interpolation=\"none\", origin=\"lower\", aspect = 'auto', extent=[-1, 5, freqs[0], freqs[-1]], vmin = -.4, vmax = .4)\n",
     "    ax.set_yticks(np.linspace(np.min(roi_pres_TFR.freqs),np.max(roi_pres_TFR.freqs),len(roi_pres_TFR.freqs)))\n",
     "    ax.set_yticklabels(np.round(roi_pres_TFR.freqs))\n",
